--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <script async src="js/bootstrap-multiselect.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
     <script async src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
-    <script async src="js/places.js"></script>
+    <script src="js/places.js"></script>
     <script src="js/app.js"></script>
 </body>
 
