--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
         </div>
     </div>
 
-    <script async src="js/knockout-3.3.0.js"></script>
-    <script async src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/knockout-3.3.0.js"></script>
+    <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script async src="js/bootstrap-multiselect.js"></script>
+    <script src="js/bootstrap-multiselect.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
-    <script async src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
+    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
     <script src="js/places.js"></script>
     <script src="js/app.js"></script>
 </body>
