--- a/index.html
+++ b/index.html
@@ -6,73 +6,52 @@
     <title>Rob's Neighborhood</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-multiselect.css">
-    <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
+     <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/offline.min.js"></script>
 </head>
 
 <body>
-    <div>
-        <!--list panel-->
-        <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm navmenu-custom">
-            <div class="panel list-group">
-                <a href="#" class="list-group-item" data-toggle="collapse" data-target="#sm" data-parent="#menu">GOOGLE<span class="icon-google pull-right"></span></a></a>
-                <div id="sm" class="sublinks collapse" data-bind="foreach: { data: googleResults, as: 'result' }">
-                    <a class="list-group-item small" data-bind="click: function (result) { highlightPin(result) }">
-                        <span class="glyphicon glyphicon-map-marker google-mini-icon"></span>
-                        <span data-bind="text: result.name"></span>
-                        <span data-bind="text: result.loc"></span>
-                    </a>
-                </div>
-                <a href="#" class="list-group-item" data-toggle="collapse" data-target="#sl" data-parent="#menu">FOURSQUARE<span class="icon-foursquare pull-right"></a>
-                <div id="sl" class="sublinks collapse" data-bind="foreach: { data: foursquareResults, as: 'result' }">
-                    <a class="list-group-item small" data-bind="click: function (result) { highlightPin(result) }">
-                        <span class="glyphicon glyphicon-map-marker foursquare-mini-icon"></span>
-                        <span data-bind="text: result.name"></span>
-                        <span data-bind="text: result.loc"></span>
-                    </a>
-                </div>
+    <!--list panel-->
+    <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm navmenu-custom">
+        <div class="list-group">
+            <div class="list-group-item">
+                <img class="wordmark" src="img/foursquare-wordmark.png" alt="FOURSQUARE">
+                <img class="icon-foursquare pull-right">
+            </div>
+            <div class="" data-bind="foreach: { data: foursquareResults, as: 'result' }">
+                <a class="list-group-item small" data-bind="click: function (result) { highlightPin(result) }">
+                    <span class="glyphicon glyphicon-map-marker foursquare-mini-icon"></span>
+                    <span data-bind="text: result.name"></span>
+                    <span data-bind="text: result.loc"></span>
+                </a>
             </div>
         </div>
-
-        <div class="navbar navbar-default navbar-fixed-top hidden-md hidden-lg navbar-custom">
-
-            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <!--search field-->
-            <form role="form-group" data-bind="submit: doSearch" style="display:inline;">
-                <div class="input-group input-custom">
-                    <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
-                    </span>
-                </div>
-            </form>
-
-
-            <div class="dropdown">
-                <select id="categories-google" multiple="multiple" data-bind="
-            options: categories(),          
-            optionsText: 'name',           
-            optionsValue: 'type',
-            selectedOptions: searchCategories"></select>
-                <select id="categories-SQ" data-bind="
-            options: foursquareCategories(),          
-            optionsText: 'name',           
-            optionsValue: 'type',
-            selectedOptions: foursquareSearchCategories"></select>
-            </div>
-
-        </div>
-
-
-        <!--google map-->
-        <div id="map-canvas"></div>
     </div>
+
+    <div class="navbar navbar-default navbar-fixed-top hidden-md hidden-lg navbar-custom">
+
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+
+        <!--search field-->
+        <form role="form-group" data-bind="submit: doSearch" style="display:inline;">
+            <div class="input-group input-custom">
+                <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
+                </span>
+            </div>
+        </form>
+
+    </div>
+
+    <!--google map-->
+    <main id="panel">
+        <div id="map-canvas"></div>
+    </main>
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -81,7 +60,6 @@
     <script src="js/jasny-bootstrap.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
-    <script src="js/places.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
