--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
     <title>Rob's Neighborhood</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
+    <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/offline.min.js"></script>
 </head>
 
 <body>
     <!--list panel-->
-    <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm navmenu-custom">
+    <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-xs">
         <div class="list-group">
+            <!--logo-->
             <div class="list-group-item">
                 <img class="wordmark" src="img/foursquare-wordmark.png" alt="FOURSQUARE">
-                <img class="icon-foursquare pull-right">
             </div>
-            <div class="" data-bind="foreach: { data: foursquareResults, as: 'result' }">
-                <a class="list-group-item small" data-bind="click: function (result) { highlightPin(result) }">
+            <!--bound list-->
+            <div class="" data-bind="foreach: { data: results, as: 'result' }">
+                <a class="list-group-item small" data-bind="click: function (result) { highlightPin(result); }">
                     <span class="glyphicon glyphicon-map-marker foursquare-mini-icon"></span>
-                    <span data-bind="text: result.name"></span>
-                    <span data-bind="text: result.loc"></span>
+                    <span class="resultname" data-bind="text: result.name"></span>
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="navbar navbar-default navbar-fixed-top hidden-md hidden-lg navbar-custom">
+    <!--header-->
+    <div class="navbar navbar-default navbar-fixed-top navbar-custom">
 
+        <!--panel toggle-->
         <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -49,15 +51,14 @@
     </div>
 
     <!--google map-->
-    <main id="panel">
-        <div id="map-canvas"></div>
-    </main>
+    <div id="map-canvas"></div>
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/knockout-3.3.0.js"></script>
     <script src="js/bootstrap-multiselect.min.js"></script>
     <script src="js/jasny-bootstrap.min.js"></script>
+    <script src="js/moment.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
     <script src="js/app.js"></script>
