--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/offline.min.js"></script>
+<link rel="shortcut icon" href="frontend-nanodegree-neighborhoodmap/favicon.ico">
+<script src="js/offline.min.js"></script>
 </head>
 
 <body>
