--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-<link rel="shortcut icon" href="frontend-nanodegree-neighborhoodmap/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <script src="js/offline.min.js"></script>
 </head>
 
