--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="shortcut icon" href="favicon.ico">
+    <script src="js/offline.min.js"></script>
+    <link rel="stylesheet" href="css/offline-language-english.css">
+    <link rel="stylesheet" href="css/offline-theme-default.css">
+    <script>
+        var run = function () {
+            if (Offline.state === 'up')
+                Offline.check();
+        }
+        setInterval(run, 5000);
+    </script>
 </head>
 
 <body>
