--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="css/offline-language-english.css">
     <link rel="stylesheet" href="css/offline-theme-default.css">
     <script>
+        Offline.options = {
+            checks: {
+                image: {
+                    url: 'favicon.ico'
+                },
+                active: 'image'
+            }
+        }
         var run = function () {
             if (Offline.state === 'up')
                 Offline.check();
