Switched offline.js theme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/offline.min.js"></script>
     <link rel="stylesheet" href="css/offline-language-english.css">
-    <link rel="stylesheet" href="css/offline-theme-default.css">
+    <link rel="stylesheet" href="css/offline-theme-dark.css">
     <script>
         Offline.options = {checks: {xhr: {url: '/frontend-nanodegree-neighborhoodmap'}}};
         var run = function () {
