--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rob's Neighborhood</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="favicon.ico">
@@ -15,7 +15,13 @@
     <link rel="stylesheet" href="css/offline-language-english.css">
     <link rel="stylesheet" href="css/offline-theme-dark.css">
     <script>
-        Offline.options = {checks: {xhr: {url: '/frontend-nanodegree-neighborhoodmap'}}};
+        Offline.options = {
+            checks: {
+                xhr: {
+                    url: '/frontend-nanodegree-neighborhoodmap'
+                }
+            }
+        };
         var run = function () {
             if (Offline.state === 'up')
                 Offline.check();
