--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div id="map-canvas"></div>
 
     <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/knockout-3.3.0.js"></script>
     <script async src="js/bootstrap.min.js"></script>
-    <script async src="js/knockout-3.3.0.js"></script>
     <script async src="js/jasny-bootstrap.min.js"></script>
     <script async src="js/moment.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
