--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </button>
 
         <!--search field-->
-        <form role="form-group" data-bind="submit: doSearch" style="display:inline;">
+        <form class="textentry" role="form-group" data-bind="submit: doSearch">
             <div class="input-group input-custom">
                 <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
-                </span>
+                <span class="input-group-addon"></span><span class="glyphicon glyphicon-search"></span> </span>
+
             </div>
         </form>
 
@@ -77,7 +77,7 @@
     <script async src="js/bootstrap.min.js"></script>
     <script async src="js/jasny-bootstrap.min.js"></script>
     <script async src="js/moment.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=places"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel_packed.js"></script>
     <script src="js/app.js"></script>
 </body>
