Html validation fixes

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </button>
 
         <!--search field-->
-        <form class="textentry" role="form-group" data-bind="submit: doSearch">
+        <form class="textentry" role="search" data-bind="submit: doSearch">
             <div class="input-group input-custom">
                 <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
-                <span class="input-group-addon"></span><span class="glyphicon glyphicon-search"></span> </span>
+                <span class="input-group-addon"></span><span class="glyphicon glyphicon-search"></span>
 
             </div>
         </form>
