Enable search icon in header

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <form class="textentry" role="search" data-bind="submit: doSearch">
             <div class="input-group input-custom">
                 <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                <span class="input-group-addon" ><a class="glyphicon glyphicon-search searchicon" data-bind="click: doSearch"></a></span>
             </div>
         </form>
 
