Enable Search button on iPhone

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!--search field-->
         <form class="textentry" role="search" data-bind="submit: doSearch">
             <div class="input-group input-custom">
-                <input type="text" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
+                <input name="search" type="search" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
                 <span class="input-group-addon" ><a class="glyphicon glyphicon-search searchicon" data-bind="click: doSearch"></a></span>
             </div>
         </form>
