iPhone button fix?

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </button>
 
         <!--search field-->
-        <form class="textentry" role="search" data-bind="submit: doSearch">
+        <form class="textentry" role="search" data-bind="submit: doSearch" action=".">
             <div class="input-group input-custom">
                 <input name="search" type="search" class="form-control" placeholder="Search for..." data-bind="value: searchTerm">
                 <span class="input-group-addon" ><a class="glyphicon glyphicon-search searchicon" data-bind="click: doSearch"></a></span>
